CCS-50 refactor: Stream 반환 객체를 collect(Collectors.toList())에서 toList()로 변환하여 불변성을 부여